# agent47

./: .dockerignore  .gitignore  .gitleaks.toml  .gitleaksignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CLAUDE_MD_AUDIT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FOLLOWUP.md  GOLDEN_PRINCIPLES.md  LICENSE  MORNING_REPORT.md  Makefile  PR_DRAFT.md  QA_REPORT.md  README.md  RESEARCH.md  SECURITY.md  SKILL.md  WORK_PLAN.md  deploy.sh  e2e_test.sh  glama.json  llms.txt  package.json  run_demo.sh  sample_output.txt  set_env.sh  smithery.yaml  tasks.md  vercel.json
.claude/: ultrareview.md
.claude/agents/: dashboard-dev.md  marketing.md  pm.md  sdk-dev.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  demo_request.yml  feature_request.md  feature_request.yml  integration_request.yml
.github/requirements/: ci-tools.in  ci-tools.txt
.github/workflows/: actionlint.yml  ci.yml  claude-review.yml  codeql.yml  deploy.yml  entropy.yml  ops-cadence.yml  publish-mcp-registry.yml  publish.yml  release-cadence.yml  release-content.yml  release.yml  scorecard.yml  scout.yml
.hardening/: guardrails.md  ledger.jsonl
.showwork/: claims-2026-07-11.jsonl  claims-2026-07-18.jsonl  sessions.jsonl
agentguard-mcp/: README.md  pyproject.toml
agentguard-mcp/agentguard_mcp/: __init__.py  __main__.py  server.py  storage.py  sync.py
agentguard-mcp/tests/: test_server.py  test_storage.py  test_sync.py
api/: lead.js
benchmarks/: README.md  bench_ollama.py
context/: blockers.md  decisions.md  icp.md  mission.md  proposals.md  state.md
dashboard/: .env.local.example  .vade-report  LICENSE  README.md  package-lock.json  package.json  vercel.json
dashboard/migrations/: 001_shared_traces.sql  002_api_key_scopes.sql
dashboard/src/: middleware.ts
docs/: RELEASING.md  cost-guardrails.md  distribution_plan.md  github_comments_draft.md  gtm.md  launch_post.md  market.md  metrics.md  micro_prompts.md  outreach_templates.md  prd.md  pricing.md  vision.md
docs/blog/: 001-why-agents-loop-devto.md  001-why-agents-loop.md  002-budget-enforcement-patterns-devto.md  003-ci-cost-gates-devto.md  PUBLISHING.md
docs/ci/: cost-gate-workflow.yml
docs/community/: engagement-plan.md
docs/competitive/: agent-security-stack.md  manifest.md  vercel-ai-gateway.md
docs/cookbooks/: langchain-budget-rag.ipynb
docs/discussions/: 01_detect_langchain_loops.md  02_budget_enforcement_patterns.md  03_limit_openai_spend.md  04_detect_tool_loops.md  05_langgraph_cost_tracking.md
docs/emails/: 01_welcome.md  02_agent_failures.md  03_dashboard_cta.md
docs/examples/: README.md  coding-agent-review-loop-incident.md  demo_agent.md  langchain_example.md  proof-gallery.md
docs/guards/: budget-aware-escalation.md
docs/guides/: activation-metrics-design.md  coding-agent-safety-pack.md  coding-agent-smoke-test.md  (+5 more)
examples/: README.md  budget_aware_escalation.py  coding_agent_review_loop.py  coding_agent_smoke.py  cost_guardrail.py  crewai_with_guards.py  dashboard_quickstart.py  decision_trace_workflow.py  demo.tape  demo_budget_kill.py  disposable_harness_session.py  langchain_rag_with_guards.py  openai_agents_with_guards.py  per_token_budget_spike.py  quickstart.ipynb  sticky_agent_proof.py  try_it_now.py
inbox/: INBOX_PROTOCOL.md  README.md  latest.md  log.md
mcp-server/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json  server.json  smithery.yaml
memory/: README.md  blockers.md  decisions.md  distribution.md  state.md
ops/: 00-NORTHSTAR.md  01-SDK_SCOPE.md  02-ARCHITECTURE.md  03-ROADMAP_NOW_NEXT_LATER.md  04-DEFINITION_OF_DONE.md  FOLLOWUP.md
scripts/: ci_tools_requirements_guard.py  deploy.sh  generate_pypi_readme.py  resolve_discussion_category.py  review_readiness_guard.py  run_demo.sh  scout.py  sdk_preflight.py  sdk_pulse.py  sdk_release_guard.py  update_scout_context.py
sdk/: PYPI_README.md  README.md  pyproject.toml
sdk/agentguard/: __init__.py  __main__.py  _trace_naming.py  atracing.py  bench.py  cli.py  cost.py  decision.py  demo.py  doctor.py  escalation.py  evaluation.py  export.py  first_run.py  goal.py  guards.py  instrument.py  mcp_audit.py  precision_cost.py  price_table.py  profiles.py  quickstart.py  recording.py  repo_config.py  reporting.py  savings.py  schemas.py  setup.py  skillpack.py  state.py  tracing.py  usage.py  viewer.py  x402.py
sdk/agentguard/integrations/: __init__.py  crewai.py  langchain.py  langgraph.py
sdk/agentguard/sinks/: __init__.py  http.py  otel.py
sdk/examples/: .env.example  agent_traces.jsonl  async_openai_agent.py  config_patterns.py  crewai_example.py  dashboard_integration.py  demo_agent.py  demo_cloud.py  dev_agent.py  fastapi_budget_middleware.py  loop_failure_demo.py  loop_traces.jsonl  mcp_audit_example.py  multi_agent_budget_sharing.py  openai_agent.py  ralph_agent.py  replay.jsonl  traces.jsonl
sdk/tests/: conftest.py  e2e_cost_guardrail.py  e2e_v110.py  integration_dashboard.py  test_architecture.py  test_async_patches.py  test_atracing.py  test_ci_guardrails.py  test_ci_tools_requirements_guard.py  test_cli_report.py  test_coding_agent_review_loop_example.py  test_coding_agent_smoke_example.py  test_concurrency.py  test_cost.py  test_cost_guardrail.py  test_coverage_gaps.py  test_crewai_integration.py  test_dashboard_handoff_docs.py  test_decision_trace.py  test_demo.py  test_doctor.py  test_dx.py  test_e2e_pipeline.py  test_evaluation.py  test_example_starters.py  test_export.py  test_exports.py  test_first_run.py  test_goal.py  test_guard_persistence.py  test_guards.py  test_guards_v2.py  test_hardening.py  test_hosted_ingest_contract.py  test_http_sink.py  test_init.py  test_instrument.py  test_instrument_patch.py  test_integration_cost_guardrail.py  test_integration_dashboard_script.py  (+35 more)
sdk/tests/fixtures/: usage_payloads.py
site/: README.md  compare.html  index.html  quickstart.html  robots.txt  security.html  sitemap.xml  trust.html
skills/: README.md
(+2501 files in other folders)
