[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentguard-mcp"
version = "0.1.0"
description = "Local-first MCP budget guard for tool calls, tokens, and dollar spend"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  {name = "BMD PAT LLC", email = "pat@bmdpat.com"}
]
keywords = [
  "agentguard",
  "mcp",
  "model-context-protocol",
  "coding-agents",
  "budget-control",
  "runtime-guardrails",
  "local-first",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Typing :: Typed",
]
dependencies = [
  "mcp>=1.23,<2",
]

[project.urls]
Homepage = "https://github.com/bmdhodl/agent47/tree/main/agentguard-mcp"
Documentation = "https://github.com/bmdhodl/agent47/tree/main/agentguard-mcp#readme"
Repository = "https://github.com/bmdhodl/agent47"
Issues = "https://github.com/bmdhodl/agent47/issues"

[project.scripts]
agentguard-mcp = "agentguard_mcp.server:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["agentguard_mcp*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
agentguard_mcp = ["py.typed"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "T20", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --strict-config"
