[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentguard47"
version = "0.8.0"
description = "Zero-dependency observability and runtime guards for AI agents"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  {name = "AgentGuard"}
]
keywords = ["agents", "observability", "tracing", "multi-agent", "llm", "guardrails", "replay"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Testing",
  "Topic :: System :: Monitoring",
]

[project.urls]
Homepage = "https://github.com/bmdhodl/agent47"
Repository = "https://github.com/bmdhodl/agent47"
Issues = "https://github.com/bmdhodl/agent47/issues"

[project.optional-dependencies]
langchain = ["langchain-core>=0.1"]

[project.scripts]
agentguard = "agentguard.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["agentguard*"]
exclude = ["tests*", "examples*"]

[tool.setuptools.package-data]
agentguard = ["py.typed"]
