[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentguard47"
version = "1.2.0"
description = "Zero-dependency observability and runtime guards for AI agents — loop detection, budget enforcement, cost tracking, and structured tracing"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  {name = "BMD PAT LLC", email = "pat@bmdpat.com"}
]
keywords = [
  "agents",
  "ai-agents",
  "observability",
  "tracing",
  "multi-agent",
  "llm",
  "guardrails",
  "loop-detection",
  "budget-guard",
  "cost-tracking",
  "langchain",
  "openai",
  "runtime-safety",
  "replay",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Testing",
  "Topic :: System :: Monitoring",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://agentguard47.com"
Documentation = "https://github.com/bmdhodl/agent47#readme"
Repository = "https://github.com/bmdhodl/agent47"
Issues = "https://github.com/bmdhodl/agent47/issues"
Changelog = "https://github.com/bmdhodl/agent47/releases"

[project.optional-dependencies]
langchain = ["langchain-core>=0.1"]
langgraph = ["langgraph>=0.1"]
crewai = ["crewai>=0.28"]
otel = ["opentelemetry-api>=1.20", "opentelemetry-sdk>=1.20"]

[project.scripts]
agentguard = "agentguard.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["agentguard*"]
exclude = ["tests*", "examples*"]

[tool.setuptools.package-data]
agentguard = ["py.typed"]
